# eXplain-NNs

./: .codecov.yml  .gitignore  LICENSE  Makefile  README.md  README_eng.md  README_ru.md  ResnetTopology.ipynb  _config.yml  contact.md  environment.yml  fasterRCNN.py  how-to-cite.md  how-to-contribute.md  how-to-use.md  index.md  install.md  kalyuzhnaya_env.yml  load_fasterRCNN.py  methods.md  project_structure.md  requirements.txt  setup.cfg  visualize faster RCNN.ipynb
.github/: README.md
.github/workflows/: mirror_repo_to_gitlab.yml  python-app.yml
api_docs/: eXNN.html  index.html  search.js
api_docs/eXNN/: InnerNeuralTopology.html  InnerNeuralViz.html  NetBayesianization.html  bayes.html  topology.html  visualization.html
api_docs/eXNN/InnerNeuralTopology/: api.html  homologies.html
api_docs/eXNN/InnerNeuralViz/: api.html  hook.html
api_docs/eXNN/NetBayesianization/: api.html  wrap.html
api_docs/eXNN/bayes/: api.html  wrapper.html
api_docs/eXNN/topology/: api.html  homologies.html  metrics.html
api_docs/eXNN/visualization/: api.html  hook.html
docs/: contribution.md  methods.md
eXNN/: test_file.py
eXNN/InnerNeuralTopology/: __init__.py  api.py  homologies.py  quantitative_indices.py
eXNN/InnerNeuralViz/: __init__.py  api.py  hook.py
eXNN/NetBayesianization/: BNN.ipynb  __init__.py  api.py  task.ipynb  wrap.py
eXNN/bayes/: __init__.py  api.py  wrap.py  wrapper.py
eXNN/topology/: __init__.py  api.py  homologies.py  metrics.py
eXNN/visualization/: __init__.py  api.py
examples/: BNN.ipynb  Topology.ipynb  Visualization.ipynb  [API]_eXNN_bayes.ipynb  [API]_eXNN_topology.ipynb  [API]_eXNN_visualization.ipynb  [API]_minimal.ipynb  [use_case]_Visualizing_RNN_latent_space_to_analyze_custom_support_dialogues.ipynb  [use_case]_detecting_adversarial_examples_ipynb_.ipynb  [use_case]_eXNN_visualization_satellite.ipynb  [use_case]_estimating_generalizability.ipynb
examples/CIFAR/: Homologies.ipynb  Visualization - Class Separation.ipynb
examples/CIFAR10/: Bayesianization_for_pruning.ipynb  Homologies.ipynb  Homologies_analysis.ipynb  Resnet_Homologies_analysis.ipynb  Visualization.ipynb  models.py  quantitative_indices_example.ipynb
examples/casting/: Bayesianization.ipynb  Bayesianization_for_adversarial.ipynb  Visualization.ipynb  data.py  industrial_task.ipynb
examples/industrial/: Visualization.ipynb  bayes_test.ipynb  visualization.ipynb
examples/minimal/: Bayesianization.ipynb  Homologies.ipynb  Visualization.ipynb
tests/: test_utils.py  tests.py  unit_tests.py
tests/test_bayesian/: test_bayes.py
tests/test_topology/: test_barcode_general.py  test_barcode_metrics.py
tests/test_visualization/: test_check_random_input.py  test_reduce_dim.py  test_visualization.py
tests/utils/: test_utils.py
tutorials/CIFAR10/: Bayesianization_for_pruning.html  Homologies_analysis.html  Visualization.html
tutorials/casting/: Bayesianization_for_adversarial.html  Visualization.html
tutorials/minimal/: Bayesianization.html  Homologies.html  Visualization.html
