[metadata]
name = eXNN
version = 0.0.1
author = ML Lab, ITMO
author_email = tpolevaya@itmo.ru
description = eXplain-NNs library
long_description = file: README_eng.md
long_description_content_type = text/markdown
url = https://github.com/Med-AI-Lab/eXplain-NNs
project_urls =
    Bug Tracker = https://github.com/Med-AI-Lab/eXplain-NNs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    eXNN = eXNN
packages = find:
python_requires = >=3.8

# [options.packages.find]
# where = ECG