[metadata]
name = eXNN
version = 0.0.1
author = ML Lab, ITMO
author_email = tpolevaya@itmo.ru
description = eXplain-NNs library
long_description = file: README_eng.md
long_description_content_type = text/markdown
url = https://github.com/Med-AI-Lab/eXplain-NNs
project_urls =
    Bug Tracker = https://github.com/Med-AI-Lab/eXplain-NNs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    eXNN = eXNN
packages = find:
python_requires = >=3.8

[flake8]
exclude = .git,.github,docs,__pycache__,env,venv,.venv

max-line-length = 100
max-complexity = 10
docstring-convention=google
ignore = C812,D100,D400,N806,N812,N813,VNE001,VNE002,VNE003,E203
per-file-ignores=
    ./eXNN/topology/__init__.py:F401
    ./eXNN/visualization/__init__.py:F401
    ./eXNN/bayes/__init__.py:F401
    ./eXNN/topology/api.py:N802
    ./eXNN/visualization/api.py:N802
    ./eXNN/bayes/api.py:N802
    ./eXNN/topology/homologies.py:A002
    ./examples/CIFAR10/models.py:A002


[tool:brunette]
exclude = .git,.github,docs,__pycache__,env,venv,.venv
line-length = 100
verbose = true
single-quotes = false

[isort]
include_trailing_comma = True
profile=black

# [options.packages.find]
# where = ECG
